# planner

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
agents/: kyzo-plan-demolition.md  kyzo-plan-development-task.md  kyzo-plan-task-completion-judge.md  kyzo-planner-demolition.md  kyzo-planner-development-task.md  kyzo-planner-task-completion-judge.md
app/: __init__.py  main.py
app/api/: __init__.py  board.py
app/domain/: __init__.py  config.py  epic.py  gh.py  git.py  issue.py  story.py  target.py  type.py  value.py
hooks/: hooks.json
scripts/: kyzo_allowlist_guard.py  kyzo_arm_session.py  test_kyzo_allowlist_guard.py  test_kyzo_dirty_paths.py  test_kyzo_dod_schema.py
skills/kyzo-plan-manage-board/: SKILL.md
skills/kyzo-plan-run-story/: SKILL.md
skills/kyzo-plan-run-story/references/: examples.md  gotchas.md
skills/kyzo-plan-task-completion-request/: SKILL.md
skills/kyzo-plan-write-epic/: SKILL.md
skills/kyzo-plan-write-story/: SKILL.md
skills/kyzo-planner-manage-board/: SKILL.md
skills/kyzo-planner-task-completion-request/: SKILL.md
skills/kyzo-planner-write-epic/: SKILL.md
skills/kyzo-planner-write-story/: SKILL.md
