[project]
name = "kyzo-planner-mcp"
version = "0.1.2"
description = "The kyzo MCP server: the KyzoDB Work board tools (the manage-board surface)."
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.2",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
